# code-review-system

./: .coverage  CLAUDE.md  IMPLEMENTATION_ROADMAP.md  MONITORING_PLAN.md  README.md  TASK_5_6_PLAN.md  codeproject.db  suggestions_cache.db
codeproject/: .coverage  .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  OPTIMIZATION_REPORT.md  README.md  README_COMPLETE.md  USAGE_GUIDE.md  codeproject.db  docker-compose.yml  pyproject.toml  suggestions_cache.db
codeproject/docs/: SUGGESTIONS.md
codeproject/migrations/: 001_add_suggestion_fields.py  __init__.py
codeproject/src/: config.py  database.py  main.py  review_service.py
codeproject/tests/: conftest.py  test_acceptance_analytics.py  test_alerting.py  test_analyzer.py  test_architecture.py  test_caching_batch_jobs.py  test_confidence_tuning.py  test_config.py  test_context_builder.py  test_database.py  test_deduplication.py  test_diff_parser.py  test_failure_predictor.py  test_feedback_collector.py  test_feedback_learning.py  test_feedback_parser.py  test_github_api.py  test_insights.py  test_integration.py  test_integration_phase5.py  test_learning_metrics.py  test_llm_provider.py  test_load_suite.py  test_main.py  test_metrics_collector.py  test_monitoring.py  test_openrouter.py  test_optimization_comparison.py  test_pattern_learning.py  test_performance_benchmarks.py  test_prediction_dashboard.py  test_query_profiling.py  test_review_service.py  test_risk_scorer.py  test_suggestion_cache.py  test_suggestion_enrichment.py  test_suggestion_ranking.py  test_suggestion_validators.py  test_suggestions.py  (+2 more)
(+77 files in other folders)
