[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-security-performance-reviewer"
version = "0.1.0"
description = "LLM-powered CI/CD code review for security and performance"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "anthropic==0.7.13",
    "langchain==0.1.0",
    "langchain-anthropic==0.1.0",
    "gitpython==3.1.40",
    "requests==2.31.0",
    "sqlalchemy==2.0.23",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "httpx==0.25.2",
]

[project.optional-dependencies]
dev = ["black==23.12.0", "ruff==0.1.9", "mypy==1.7.1"]
